# sqlcc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  ChangeLog.md  Doxyfile  Guide.md  LICENSE  Makefile  README.en.md  README.md  RELEASE.md  RELEASE_NOTES_v0.4.8.md  TRAE-Chat.md  VERSION  VERSION_SUMMARY  VERSION_SUMMARY.md  buffer_pool_access_pattern.csv  buffer_pool_cache_hit_rate.csv  buffer_pool_lru_efficiency.csv  buffer_pool_size_scalability.csv  check_external_files.sh  clean_external_files.sh  copy_coverage_reports.sh  coverage_report.ast_node.cpp.b6f6167e3b47400a5d19b636e21578d6.html  coverage_report.ast_node.h.a69bd26004051e3ea25d1256aa23a0e3.html  coverage_report.ast_nodes.cpp.d840099891d0b82decfa2e698f218543.html  coverage_report.ast_nodes.h.7880d8c6310abb0f206bb4a83037a688.html  coverage_report.b_plus_tree.cpp.2d3d3b54d9f3fc50e2dc1c4854f0206d.html  coverage_report.b_plus_tree.h.835d9bfcdacde20662cca6437ae703c0.html  coverage_report.buffer_pool.cpp.024bf0c64c0bc52ad17e37e487944730.html  coverage_report.buffer_pool_sharded.cpp.24fd445d9a6e352a390f31908aa299ba.html  coverage_report.buffer_pool_sharded.h.5bdcca675babc5a27d97cb3df8c220e4.html  coverage_report.client_main.cpp.f2378a37d15b58c64f5358aa602d817e.html  coverage_report.config_manager.cpp.d9bcd28b8f6bbdd0afb9a6e653bf6e6f.html  coverage_report.config_manager.h.854a8b5d6120396dca78240b5a4e2060.html  coverage_report.data_type.cpp.f89837cd257c3b0420bc8d3f69914e68.html  coverage_report.data_type.h.3501fd944d9d2dbef00201a5ada5b187.html  coverage_report.database_manager.cpp.daabe6dd97de935d29dea65e1c0a5700.html  coverage_report.database_manager.h.235b3a6edb2bb37cfcf4a92fca0f9ff2.html  (+80 more)
build_new/ast_core_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
build_new/dfa_integration_test/: CMakeLists.txt
build_new/dfa_lexer_test/: CMakeLists.txt  Makefile  README.md  simple_test  simple_test.cpp  test_dfa_lexer
build_new/parser_refactor_test/: CMakeLists.txt  test_parser_basic
build_new/statement_node_test/: CMakeLists.txt
config/: CMakeLists.txt  files_with_relative_includes.txt  sqlcc.conf  sqlcc_test.conf
docs/: API文档生成说明.md  (+30 more)
src/: CMakeList.txt  CMakeLists.txt  b_plus_tree.cc  buffer_pool.cc  buffer_pool_new.cc  buffer_pool_sharded.cc  comprehensive_test.cpp  config_manager.cc  config_manager.cpp  config_test.cc  constraint_executor.cpp  data_type.cpp  database_manager.cpp  dcl_test.cpp  dcl_test_advanced.cpp  ddl_test.cpp  disk_manager.cc  dml_test.cc  dml_test.cpp  error_handler.cpp  execution_context.cpp  execution_engine.cpp  index_manager.cpp  isql_main.cc  isql_main.cpp  main.cc  page.cc  permission_validator.cpp  simple_test.cpp  sql_executor.cpp  sql_executor.cpp.backup  sql_executor_minimal_test.cpp  sql_executor_unit_test.cpp  storage_engine.cc  transaction_manager.cc  transaction_manager.cpp  unified_executor.cpp  unified_query_plan.cpp
src/core/: config_manager.cpp  database_manager.cpp
src/execution/: join_executor.cpp  set_operation_executor.cpp  subquery_executor.cpp
src/isql_network/: client_main.cpp  demo_client.cpp
src/network/: encryption.cpp  network.cc  network.cpp
src/sql_executor/: constraint_executor.cpp  index_manager.cpp  schema_manager.cpp  sql_executor.cpp  sql_executor.h  sql_executor_stub.cpp  system_database.cpp  user_manager.cpp  view_manager.cpp
src/sql_parser/: ast_node.cpp  ast_nodes.cpp  lexer.cpp  lexer_new.cpp  parser.cpp  parser.h  parser_new.cpp  parser_set_operations.cpp  set_operation_node.cpp  statement.h  test_lexer_new.cpp  token.cpp  token.h  token_new.cpp
src/sqlcc/: CMakeLists.txt  wal_manager.cc
src/sqlcc_server/: demo_server.cpp  server_main.cpp
src/storage_engine/: b_plus_tree.cpp  buffer_pool.cc  buffer_pool.cpp  buffer_pool_new.cc  buffer_pool_new.cpp  buffer_pool_sharded.cc  buffer_pool_sharded.cpp  page.cc  page.cpp  storage_engine.cpp  table_storage.cpp
src/transaction_manager/: transaction_manager.cc  transaction_manager.cpp  wal_manager.cc  wal_manager.cpp
tests/: CMakeLists.txt  CMakeLists_new.txt.backup  README.md  buffer_pool_test.cc  comprehensive_sales_test  comprehensive_sales_test.cpp  deadlock_fix_test.cc  disk_manager_test.cc  lock_timeout_test.cc  manual_test_system_database.cpp  storage_engine_newpage_test.cc  storage_engine_test.cc  test_disk_manager.h  test_executor.cpp  test_improvement_implementation_guide.md  test_improvement_plan.md  test_revoke_persistence.cpp  test_show_commands.cpp  unsupported_commands_test.cpp
tests/advanced_sql/: CMakeLists.txt  advanced_sql_test
tests/client_server/: client_server_integration_test.cpp  client_test.cpp  client_test.h  encrypted_integration_test.cpp  encrypted_test_runner.cpp  server_manager.cpp  server_manager.h
tests/framework/: CMakeLists.txt  README.md
tests/integration/: CMakeLists.txt  comprehensive_test.cpp  simple_sql_test.cpp  sql_executor_integration_test.cpp
tests/legacy/: dcl_ddl_persistence_test.cpp  persistence_check.cpp  pure_fs_test.cpp  simple_db_test.cpp  simple_dcl_ddl_test.cpp  test_db_persistence.cpp  test_dcl_ddl_persistence.cpp  test_table_storage.cpp  user_persistence_test.cpp
tests/network/: CMakeLists.txt  aes_encryption_test.cc  aes_network_integration_test.cc  sql_network_test.cpp  tls_e2e_test.cc
tests/performance/: CMakeLists.txt  batch_prefetch_performance_test.cc  batch_prefetch_performance_test.h  buffer_pool_performance_test.cc  buffer_pool_performance_test.h  disk_io_performance_test.cc  disk_io_performance_test.h  index_constraint_benchmark.cc  index_constraint_benchmark.h  index_performance_test.cc  index_performance_test.h  large_scale_index_constraint_test.cc  large_scale_index_constraint_test.h  million_insert_test.cc  million_insert_test.h  mixed_workload_test.cc  mixed_workload_test.h  network_performance_test.cc  performance_test.cc  performance_test_base.cc  performance_test_base.h  performance_test_report.md
tests/regression/: CMakeLists.txt
tests/security/: CMakeLists.txt
tests/sql_executor/: sql_executor_comprehensive_test.cpp  sql_executor_minimal_test.cpp  sql_executor_targeted_test.cpp  (+3 more)
(+2382 files in other folders)
